src/app/events/addeditevent/input-with-tag-suggestions/input-with-tag-suggestions.component.css
li{
  padding: 8px;
  cursor: pointer;
  list-style-type: none;
  background-color: #f6f6f6;
  border-bottom: 1px solid #ddd;

}

li:hover{
  background-color: #857d7d;
}

ul{
  margin-top: 10px;
  padding: 0;
  list-style-type: none;
  background-color: #f6f6f6;
}

.dropdown{
  position: absolute;
  width: 100%;
  z-index: 1;
}

li.selected {
  background-color: #eee;
}

.headerTag{
  font-size: 20px;
  font-weight: bold;
  color: #857d7d;
}


.headerTag:hover{
  background-color: #f6f6f6;
  cursor: default;
}

